k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promotion
spec:
  type: ClusterIP
  selector:
    app: promotion
  ports:
    - port: 8000
      targetPort: 8000
